# aoc

./: .gitignore  CMakeLists.txt  README.md
2025/: CMakeLists.txt
2025/common/: input_reader.hpp
2025/day1/cpp/: day1_part1.cpp  day1_part2.cpp
2025/day2/cpp/: CMakeLists.txt  day2_part1.cpp  day2_part1_brina.cpp  day2_part2.cpp
2025/day3/cpp/: CMakeLists.txt  day3_part1_cjl.cpp  day3_part2.cpp  day3_part2_cjl.cpp
2025/day4/cpp/: CMakeLists.txt  day4_part1.cpp  day4_part1_cjl.cpp  day4_part2.cpp  day4_part2_cjl.cpp
2025/day5/cpp/: CMakeLists.txt  day5_part1.cpp  day5_part1_cjl.cpp  day5_part2.cpp  day5_part2_cjl.cpp
2025/day6/cpp/: CMakeLists.txt  day6_part1.cpp  day6_part1_cjl.cpp  day6_part2.cpp  day6_part2_cjl.cpp
2025/day7/cpp/: CMakeLists.txt  day7_part1.cpp  day7_part1_cjl.cpp  day7_part2.cpp  day7_part2_cjl.cpp
common/: input_reader.hpp
day1/cpp/: CMakeLists.txt  day1_part1.cpp  day1_part2.cpp
day2/cpp/: CMakeLists.txt  day2_part1.cpp  day2_part2.cpp  day2_part2_brina.cpp
day3/cpp/: CMakeLists.txt  day3_part1.cpp
